--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "*",
     "ejs": "^2.5.7",
     "express": "*",
+    "express-validator": "^4.2.0",
     "nodemon": "^1.12.1"
   },
   "author": "",
