--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "^2.5.7",
     "express": "*",
     "express-validator": "^4.2.0",
+    "mongojs": "^2.4.1",
     "nodemon": "^1.12.1"
   },
   "author": "",
